<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_faq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.creditscore.sujeet.samplecreditscore.Faq">


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="#ffffff"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rey.material.widget.Button
                android:id="@+id/layout1"
                android:onClick="toggle_contents1"
                android:text="@string/howHead1"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@color/faq"
                android:padding="10dp"
                android:textSize="20sp"
                app:rd_cornerRadius="4dp"
                app:rd_delayClick="untilRelease"
                app:rd_enable="true"
                app:rd_rippleColor="#50FF4500"
                app:rd_rippleType="wave"
                />

            <LinearLayout
                android:id="@+id/content1"
                android:layout_below="@+id/layout1"

                android:padding="10dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/howContent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>



            <com.rey.material.widget.Button
                android:layout_below="@+id/content1"
                android:id="@+id/layout2"
                android:onClick="toggle_contents2"
                android:text="@string/howHead2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@color/faq"
                android:padding="10dp"
                android:textSize="20sp"
                app:rd_cornerRadius="4dp"
                app:rd_delayClick="untilRelease"
                app:rd_enable="true"
                app:rd_rippleColor="#50FF4500"
                app:rd_rippleType="wave"
                />

            <LinearLayout
                android:id="@+id/content2"
                android:layout_below="@+id/layout2"

                android:padding="10dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/howContent2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>



            <com.rey.material.widget.Button
                android:layout_below="@+id/content2"
                android:id="@+id/layout3"
                android:onClick="toggle_contents3"
                android:text="@string/howHead3"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@color/faq"
                android:padding="10dp"
                android:textSize="20sp"
                app:rd_cornerRadius="4dp"
                app:rd_delayClick="untilRelease"
                app:rd_enable="true"
                app:rd_rippleColor="#50FF4500"
                app:rd_rippleType="wave"
                />

            <LinearLayout
                android:id="@+id/content3"
                android:layout_below="@+id/layout3"

                android:padding="10dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/howContent3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>



            <com.rey.material.widget.Button
                android:layout_below="@+id/content3"
                android:id="@+id/layout4"
                android:onClick="toggle_contents4"
                android:text="@string/howHead4"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@color/faq"
                android:padding="10dp"
                android:textSize="20sp"
                app:rd_cornerRadius="4dp"
                app:rd_delayClick="untilRelease"
                app:rd_enable="true"
                app:rd_rippleColor="#50FF4500"
                app:rd_rippleType="wave"
                />

            <LinearLayout
                android:id="@+id/content4"
                android:layout_below="@+id/layout4"

                android:padding="10dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/howContent4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
